--- a/u/ut/uth/uthscsa.edu.html
+++ b/u/ut/uth/uthscsa.edu.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the uthscsa.edu privacy policy that was archived on 2001-06-03.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20010603075252id_/http%3A//www.uthscsa.edu/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the uthscsa.edu privacy policy that was archived on 2002-06-03.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020603180404id_/http%3A//www.uthscsa.edu/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
 <title>Privacy Policy - The University of Texas Health Science Center at San Antonio</title>
@@ -12,6 +12,7 @@
                 font-family: arial,helvetica,verdana;
                 font-size: 12px;
 				}
+				
 	            div.menu {
                 font-family: arial,helvetica,verdana;
                 font-size: 12px;}
@@ -32,8 +33,8 @@
 			  text-decoration: none }
 </style>
 <meta name="title" content="Privacy policy,University of Texas Health Science Center at San Antonio"> 
-<meta name="keywords" content="web privacy,privacy,cookies,forms,email"> 
-<meta name="description" content="A description of the privacy policies used for websites at the University of Texas Health Science Center at San Antonio.">
+<meta name="keywords" content="web privacy,privacy,cookies,forms,email,personal,correct"> 
+<meta name="description" content="A description of the privacy policies  at the University of Texas Health Science Center at San Antonio.">
 <meta name="author" content="State of Texas,University of Texas Health Science Center at San Antonio">
 </head>
 <body bgcolor="#ffffff" marginheight="0" marginwidth="0">
@@ -43,15 +44,17 @@
 <a href="http://www.uthscsa.edu"><img src="hscbar.gif" width="635" height="57" border="0" alt="Health Science Center insignia"></a></td></tr><tr>
 <!--- menu starts here --->
 <td valign="top" width="130"><div class="menu">
-	<img src="space.gif" width="1" height="4" alt="."><br><a href="http://dental.uthscsa.edu">Dental School</a><br>
+		<a href="#navskip"><img src="space.gif" width="1" height="4" border="0" alt="skip to main content"></a><br>
+	
+	<a href="http://dental.uthscsa.edu/">Dental School</a><br>
 	<img src="space.gif" width="1" height="3" alt="."><br>
-	<a href="http://www.uthscsa.edu/gsbs">Graduate School of Biomedical Sciences</a><br>
+	<a href="http://www.uthscsa.edu/gsbs/">Graduate School of Biomedical Sciences</a><br>
       <img src="space.gif" width="1" height="3" alt="."><br>
 	<a href="http://www.uthscsa.edu/som/som_main.html">Medical School</a><br>
 	<img src="space.gif" width="1" height="3" alt="."><br>
 	  <a href="http://www.uthscsa.edu/sah/sah_main.html">School of Allied Health Sciences</a><br>
 	<img src="space.gif" width="1" height="3" alt="."><br>
-	<a href="http://nursing.uthscsa.edu">School of Nursing</a><br>
+	<a href="http://nursing.uthscsa.edu/">School of Nursing</a><br>
 	<img src="space.gif" width="1" height="5" alt="."><br>
 	</div><div class="smalltext">Affiliated schools<br></div><div class="menu">
 	<img src="space.gif" width="1" height="2" alt="."><br>
@@ -59,53 +62,56 @@
 	<img src="space.gif" width="1" height="3" alt="."><br>
 	<a href="http://www.sph.uth.tmc.edu:8055/sa/">School of Public Health</a><br>
 	<img src="space.gif" width="1" height="3" alt="."><br>
-	<a href="http://www.uthscsa.edu/index.html">University homepage</a></div>
-<form action="http://pacer.uthscsa.edu/scripts/usearchq.idq" method="GET">
-<input type="TEXT" name="UCiRestriction" size="9" maxlength="25" value="">
-<input type="SUBMIT" value="Find">
-<input type="HIDDEN" name="CiScope" value="/">
-<input type="HIDDEN" name="FastDir" value="scripts">
-<input type="HIDDEN" name="HTMLQueryForm" value="usearchq.htm"></form>
-<div class="smalltext">
+	<a href="http://www.uthscsa.edu/index.html">University homepage</a></div><br>
+<form action="http://seeker.uthscsa.edu/cgi-bin/phtm_cgi.exe?search" method="post">
+<input name=".searchText" size="9">
+<input type="hidden" name=".Details" value="Details" checked="">
+<input type="submit" value="Find">
+<div class="smalltext"><br>
 Produced by:<br>
-<a href="http://webteam.uthscsa.edu">WebTeam</a><br>
-Multimedia and Web Division<br>
+<a href="http://webteam.uthscsa.edu/">WebTeam</a><br>
+<a href="http://www.uthscsa.edu/imsservices/">Information and Management Services</a><br>
 Contact: <a href="mailto:webadmin@uthscsa.edu">WebAdmin</a><br>
-Updated April 10, 2001<br>
+Updated Jan. 22, 2002<br>
 </div>
-</td>
+</form></td>
 <!--- main text --->
 <td valign="top" width="510">
 <div class="text">
+<a name="navskip"></a>
 <strong>Web Privacy Policy</strong><p>
 </p><p>The University of Texas Health Science Center at San
 Antonio maintains its website, www.uthscsa.edu, as a service to its students,
-employees and the public. The following is the privacy policy for this site (all pages within the domain uthscsa.edu):</p>
-<p>1. We use cookies to collect information. This information is limited to logging
-the path a user takes through the website. Note: A cookie file contains unique information a website can use to track such things as passwords, lists of pages you've visited, and the date when you last looked at a specific page or to identify your session at a particular website. A cookie is often used in commercial sites to identify the items selected for a specific shopping cart application. </p>
-<p>2. If you send us an electronic mail message with a question or comment that contains
+employees and the public. The following is the privacy policy for this site (all pages within the domain uthscsa.edu):</p><ol>
+<li> We use cookies to collect information. This information is limited to logging
+the path a user takes through the website, or to temporarily preserve information the user
+supplies to complete multi-part web forms. Note: A cookie file contains unique information a website can use to track such things as passwords, lists of pages you've visited, and the date when you last looked at a specific page or to identify your session at a particular website. A cookie is often used in commercial sites to identify the items selected for a specific shopping cart application. 
+</li><li> If you send us an electronic mail message with a question or comment that contains
  personally identifying information, or fill out a form that e-mails us
   this information, we will only use the personally-identifiable information
    to respond to your request and analyze trends. We may redirect your message
     to another part of our university, another institution, a government agency or a person who is in a better position to
-	 answer your question.</p>
-<p>3. For site management functions, information is collected for analysis
+	 answer your question.
+</li><li> For site management functions, information is collected for analysis
  and statistical purposes. This information is not reported or used in
   any manner that would reveal personally identifiable information, and will
    not be released to any outside parties unless legally required to do so
-    in connection with law enforcement investigations or other legal proceedings. </p>
-	<p>4. Information collected from the Health Science Center website, including the summary server log
+    in connection with law enforcement investigations or other legal proceedings. 
+	</li><li> Information collected from the Health Science Center website, including the summary server log
  information, e-mails sent to the website, and information collected from web-based forms, may
  be subject to the Texas Public Information Act.
-</p><p>5. Except for authorized law enforcement investigations, no other attempts are made to identify
+ </li><li>Individuals have rights under Section 559.03(a) of the Texas Government Code to correct
+any erroneous personal information The University of Texas Health Science Center at San Antonio collects.
+The university has posted <a href="publicinfo.html">procedures</a> for requesting corrections.
+</li><li> Except for authorized law enforcement investigations, no other attempts are made to identify
 individual users or their usage habits. Raw data logs are used for no other purpose and are
 scheduled for regular destruction in accordance with National Archives and Records
-Administration General Schedule 20.</p>
-<p>6. We use log analysis tools to create summary statistics, which are used
+Administration General Schedule 20.
+</li><li> We use log analysis tools to create summary statistics, which are used
  for purposes such as assessing what information is of most interest,
   determining technical design specifications, and identifying system
    performance or problem areas. The following information is collected 
-   for this analysis:</p>
+   for this analysis:
 <ul type="square">
 <li>User Client hostname - The hostname (or IP address if DNS is disabled) of the user/client requesting access. 
 </li><li>HTTP header, "user-agent" - The user-agent information includes the type of browser, its version, and the operating system it's running on.
@@ -119,12 +125,10 @@ Administration General Schedule 20.</p>
 </li><li>Query string of the URI - Anything after the question mark in a URI. 
 </li><li>Protocol - The transport protocol and version used. 
 </li></ul>
-<p>Click <a href="http://www.uthscsa.edu/admin/awindexa.html">here to see yesterday's analysis</a> for www.uthscsa.edu. 
+ </li></ol>
 Questions about this policy should be sent to the webmaster at <a href="mailto:webadmin@uthscsa.edu">webadmin@uthscsa.edu</a>.
-</p><p></p>
-April 10, 2001<br>
-
-
+<p></p>
+Jan. 22, 2002<br>
 </div>
 </td>
 </tr>
