--- a/t/th/the/thecarconnection.com.html
+++ b/t/th/the/thecarconnection.com.html
@@ -1,11 +1,11 @@
-<!--The following is the downloaded HTML source of the thecarconnection.com privacy policy that was archived on 2001-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011216220042id_/http%3A//thecarconnection.com/index.asp%3Farticle%3D164) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the thecarconnection.com privacy policy that was archived on 2002-06-03.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020603180438id_/http%3A//www.thecarconnection.com/index.asp%3Farticle%3D164) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <title>The Car Connection [ The Web´s Automotive Authority ]</title>
 <meta name="keywords" content="Happy New Year, Millennium, y2k, 2000, The Car Connection, TCC, car, truck, pickup, sedan, SUV, sport-ute, sport-utility vehicle, minivan, Jaguar, Volvo, Ford, General Motors, GM, Lincoln, Mercury, Mazda, review, reviews, Headlight News, Kelley Blue Book, auto shows, Detroit, Los Angeles, L.A., LA, Paris, Dakar, ">
 <meta name="description" content="It's another massively hyped week here at The Car Connection - and as usual, it's living up to the advance word. We're launching TCC 2.7 today, complete with Headlight News Daily, our new weekly TCC Online Poll, and TCC's Car Tip of the week. To go along with the fireworks, we've prepped a revised TCC Forums area, revamped our TCC Bookstore, freshened up our weekly What's New newsletter, and updated our calendar for the year 2000.">
-<meta name="COPYRIGHT" content="TheCarConnection 2001">
+<meta name="COPYRIGHT" content="TheCarConnection 2002">
 <meta name="robots" content="ALL">
 <meta name="revisit-after" content="14 days">
 <!--<meta http-equiv="Refresh" CONTENT="30">-->
@@ -15,7 +15,7 @@
 
 
 var base_dir = "/g/n/";
-var imgs = new Array('news_over.gif','reviews_over.gif','insiders_over.gif','drivers_over.gif','extras_over.gif','shopping_over.gif');
+var imgs = new Array('home_over.gif','news_over.gif','reviews_over.gif','insiders_over.gif','drivers_over.gif','extras_over.gif','shopping_over.gif');
 for (var i=0; i < imgs.length; i++) { var img = new Image(); img.src = base_dir + imgs[i]; }
 function rollover(name1,img1) { document.images[name1].src = base_dir + img1; }
 function zoom(isrc) { zw = window.open('/zoom-image.asp?' + isrc,'zw','height=450,width=600,toolbar=no,scrollbars=yes,menubar=no,resizable=yes'); }
@@ -44,7 +44,7 @@ function refreshBanner(ZoneID){
 				document.write('<A name="tccbanner" HREF="http://www.thecarconnection.com/banman/banman.asp?ZoneID=2&Task=Click&Mode=HTML" target="_blank"><IMG name="tccbannerimg" SRC="http://www.thecarconnection.com/banman/banman.asp?ZoneID=2&Task=Get&Mode=HTML&fightcache=' + (new Date()).getTime() + '" width="468" height="60" border="0"></A>');
 				setTimeout("refreshBanner('2')",30000);
 				// --> 
-			</script><a name="tccbanner" href="http://www.thecarconnection.com/banman/banman.asp?ZoneID=2&amp;Task=Click&amp;Mode=HTML" target="_blank"><img name="tccbannerimg" src="http://www.thecarconnection.com/banman/banman.asp?ZoneID=2&amp;Task=Get&amp;Mode=HTML&amp;fightcache=1580375577150" width="468" height="60" border="0"></a>
+			</script><a name="tccbanner" href="http://www.thecarconnection.com/banman/banman.asp?ZoneID=2&amp;Task=Click&amp;Mode=HTML" target="_blank"><img name="tccbannerimg" src="http://www.thecarconnection.com/banman/banman.asp?ZoneID=2&amp;Task=Get&amp;Mode=HTML&amp;fightcache=1580375579543" width="468" height="60" border="0"></a>
 			<noscript>
 				<a name="tccbanner" href="http://www.thecarconnection.com/banman/banman.asp?ZoneID=2&Task=Click&Mode=HTML&PageID=73866" target="_new">
 					<img name="tccbannerimg" src="http://www.thecarconnection.com/banman/banman.asp?ZoneID=2&Task=Get&Mode=HTML&PageID=73866" width="468" height="60" border="0">
@@ -87,7 +87,37 @@ document.write('<b>' + dayname + '&nbsp;&nbsp; | &nbsp;&nbsp;' + monthname + ' '
 <tbody><tr>
 	<!-- start left side navigation -->
 	<td width="180" valign="top"><table border="0" cellpadding="0" cellspacing="0" width="180">
-<tbody><tr><td><a href="/index.asp?n=156&amp;sid=156" onmouseover="rollover('news','news_over.gif')" onmouseout="rollover('news','news.gif')"><img src="/g/n/news.gif" alt="news" width="180" height="24" name="news" border="0"></a></td></tr><tr><td><a href="/index.asp?n=157&amp;sid=157" onmouseover="rollover('reviews','reviews_over.gif')" onmouseout="rollover('reviews','reviews.gif')"><img src="/g/n/reviews.gif" alt="reviews" width="180" height="24" name="reviews" border="0"></a></td></tr><tr><td><a href="/index.asp?n=158&amp;sid=158" onmouseover="rollover('insiders','insiders_over.gif')" onmouseout="rollover('insiders','insiders.gif')"><img src="/g/n/insiders.gif" alt="insiders" width="180" height="24" name="insiders" border="0"></a></td></tr><tr><td><a href="/index.asp?n=163&amp;sid=163" onmouseover="rollover('drivers','drivers_over.gif')" onmouseout="rollover('drivers','drivers.gif')"><img src="/g/n/drivers.gif" alt="drivers" width="180" height="24" name="drivers" border="0"></a></td></tr><tr><td><a href="/index.asp?n=160&amp;sid=160" onmouseover="rollover('extras','extras_over.gif')" onmouseout="rollover('extras','extras.gif')"><img src="/g/n/extras.gif" alt="extras" width="180" height="24" name="extras" border="0"></a></td></tr><tr><td><a href="/index.asp?n=161&amp;sid=161" onmouseover="rollover('shopping','shopping_over.gif')" onmouseout="rollover('shopping','shopping.gif')"><img src="/g/n/shopping.gif" alt="shopping" width="180" height="24" name="shopping" border="0"></a></td></tr></tbody></table></td>
+<tbody><tr><td><a href="/index.asp" onmouseover="rollover('home','home_over.gif')" onmouseout="rollover('home','home.gif')"><img src="/g/n/home.gif" alt="home" width="180" height="24" name="home" border="0"></a></td></tr><tr><td><a href="/index.asp?n=156&amp;sid=156" onmouseover="rollover('news','news_over.gif')" onmouseout="rollover('news','news.gif')"><img src="/g/n/news.gif" alt="news" width="180" height="24" name="news" border="0"></a></td></tr><tr><td><a href="/index.asp?n=157&amp;sid=157" onmouseover="rollover('reviews','reviews_over.gif')" onmouseout="rollover('reviews','reviews.gif')"><img src="/g/n/reviews.gif" alt="reviews" width="180" height="24" name="reviews" border="0"></a></td></tr><tr><td><a href="/index.asp?n=158&amp;sid=158" onmouseover="rollover('insiders','insiders_over.gif')" onmouseout="rollover('insiders','insiders.gif')"><img src="/g/n/insiders.gif" alt="insiders" width="180" height="24" name="insiders" border="0"></a></td></tr><tr><td><a href="/index.asp?n=163&amp;sid=163" onmouseover="rollover('drivers','drivers_over.gif')" onmouseout="rollover('drivers','drivers.gif')"><img src="/g/n/drivers.gif" alt="drivers" width="180" height="24" name="drivers" border="0"></a></td></tr><tr><td><a href="/index.asp?n=160&amp;sid=160" onmouseover="rollover('extras','extras_over.gif')" onmouseout="rollover('extras','extras.gif')"><img src="/g/n/extras.gif" alt="extras" width="180" height="24" name="extras" border="0"></a></td></tr><tr><td><a href="/index.asp?n=161&amp;sid=161" onmouseover="rollover('shopping','shopping_over.gif')" onmouseout="rollover('shopping','shopping.gif')"><img src="/g/n/shopping.gif" alt="shopping" width="180" height="24" name="shopping" border="0"></a></td></tr></tbody></table>
+
+<table border="0" cellpadding="0" cellspacing="0" width="180">
+<tbody><tr>
+	<td colspan="2" align="center">
+		<img src="/g/d.gif" width="1" height="12" alt="" border="0"><br>
+		<img src="/g/n/search.gif" width="180" height="24" border="0" alt="search"></td>
+</tr>
+<tr>
+	<td>
+		<table border="0" cellpadding="0" cellspacing="0" width="150">
+		<form name="form_search" action="/search.asp" method="get"></form>
+		<tbody><tr bgcolor="#cccccc">
+			<td align="center"><font face="Verdana,Arial" size="1"><input type="text" style="FONT-FAMILY: Verdana,Arial,Helvetica,Sans-serif;FONT-SIZE: 11px;width:115px;" size="11" name="q"></font></td>
+			<td align="center"><font face="Verdana,Arial" size="1"><input style="FONT-FAMILY: Verdana,Arial,Helvetica,Sans-serif;FONT-SIZE: 10px;width:27px;" type="submit" value="GO" size="4"></font></td>
+		</tr>
+		<tr bgcolor="#cccccc">
+			<td colspan="2"><img src="/g/d.gif" width="150" height="1" alt="" border="0"></td>
+		</tr>
+		<tr bgcolor="#cccccc">
+			<td colspan="2" align="center"><font face="Verdana, Arial" size="1"><a href="/search.asp?q=">ADVANCED SEARCH</a></font></td>
+		</tr>
+		<tr bgcolor="#cccccc">
+			<td colspan="2"><img src="/g/d.gif" width="150" height="2" alt="" border="0"></td>
+		</tr>
+		
+		</tbody></table>
+	</td>
+</tr>
+</tbody></table>
+</td>
 
 	<!-- end left side navigation area -->
 
@@ -121,37 +151,6 @@ document.write('<b>' + dayname + '&nbsp;&nbsp; | &nbsp;&nbsp;' + monthname + ' '
 	<td width="10"><!--10 pixel gutter--><img src="/g/d.gif" alt="" width="10" height="1" border="0"></td>
 	<td valign="top" width="160">
 	
-<table border="0" cellpadding="0" cellspacing="0" width="100%">
-<form name="form_search" action="/search.asp" method="get"></form>
-<tbody><tr bgcolor="#990066">
-	<td colspan="2"><img src="/g/d.gif" width="160" height="1" alt="" border="0"></td>
-</tr>
-<tr bgcolor="#993366">
-	<td colspan="2" align="center"><font face="Verdana, Arial" size="1" color="#ffffff"><b>TCC SEARCH</b></font></td>
-</tr>
-<tr bgcolor="#990066">
-	<td colspan="2"><img src="/g/d.gif" width="160" height="1" alt="" border="0"></td>
-</tr>
-<tr bgcolor="#cccccc">
-	<td align="center"><font face="Verdana,Arial" size="1"><input type="text" size="15" name="q"></font></td>
-	<td align="center"><font face="Verdana,Arial" size="1"><input type="submit" value="GO"></font></td>
-</tr>
-<tr bgcolor="#cccccc">
-	<td colspan="2"><img src="/g/d.gif" width="160" height="1" alt="" border="0"></td>
-</tr>
-<tr bgcolor="#cccccc">
-	<td colspan="2" align="center"><font face="Verdana, Arial" size="1"><a href="/search.asp?q=">ADVANCED SEARCH</a></font></td>
-</tr>
-<tr bgcolor="#cccccc">
-	<td colspan="2"><img src="/g/d.gif" width="160" height="2" alt="" border="0"></td>
-</tr>
-<tr bgcolor="#993366">
-	<td colspan="2"><img src="/g/d.gif" width="160" height="1" alt="" border="0"></td>
-</tr>
-
-</tbody></table>
-
-<br>
 <table border="0" cellpadding="0" cellspacing="0" width="100%">
 <tbody><tr bgcolor="#993366">
 	<td colspan="2" align="center"><font face="Verdana, Arial" size="1" color="#ffffff"><b>CONNECT</b></font></td>
@@ -268,7 +267,7 @@ document.write('<b>' + dayname + '&nbsp;&nbsp; | &nbsp;&nbsp;' + monthname + ' '
 		<tbody><tr>
 			<td valign="top" align="center">
 			<p><font face="Verdana, Arial" size="1">
-			Copyright © 2001 by the Car Connection <sup>TM</sup>.  All Rights Reserved.<br>
+			Copyright © 2002 by the Car Connection <sup>TM</sup>.  All Rights Reserved.<br>
 			The Car Connection is a Trademark of DA Acquisitions, Inc.
 			</font></p>
 			</td>
