--- a/d/du/dum/dumex.com.cn.html
+++ b/d/du/dum/dumex.com.cn.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the dumex.com.cn privacy policy that was archived on 2001-12-14.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011214165151id_/http%3A//www.dumex.com.cn/corporate/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the dumex.com.cn privacy policy that was archived on 2002-06-03.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020603224136id_/http%3A//www.dumex.com.cn/corporate/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 <title>YoungNutrition.net</title>
@@ -479,8 +479,8 @@ function preloadImages() {
                     <p>Copyright © 2001 
                     <!--<a href="/corporate/profile.html">The East Asiatic Company (Singapore) Pte Ltd</a> All rights reserved.<br>-->
 					<a href="/corporate/profile.html">International Nutrition Company Ltd A/S</a> All rights reserved.<br>
-                      Developed &amp; Managed by <a href="http://www.asiacontent.com.sg" target="acc">Asiacontent 
-                      Solutions</a><br>
+                      Developed &amp; Managed by <a href="http://www.convertium.com" target="acc">Convertium 
+                      Pte Ltd</a><br>
                       <a href="/corporate/agreement.html" target="new">User Agreement</a> 
                       | <a href="/corporate/privacy.html" target="new2">Privacy 
                       Notice</a> | <a href="/sitemap/index.php">Sitemap</a>
