--- a/w/we/web/webspawner.com.html
+++ b/w/we/web/webspawner.com.html
@@ -1,7 +1,8 @@
-<!--The following is the downloaded HTML source of the webspawner.com privacy policy that was archived on 2001-06-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20010606234432id_/http%3A//www.webspawner.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the webspawner.com privacy policy that was archived on 2002-06-03.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020603235533id_/http%3A//www.webspawner.com/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
+<link rel="stylesheet" href="http://www.webspawner.com/default.css" type="text/css">
 <meta name="description" content="Webspawner Privacy Policy">
 <meta name="keywords" content="privacy policy,privacy, free web pages">
 <meta name="robots" content="All">
@@ -152,7 +153,7 @@ Fast, Easy and FREE Webpages at Webspawner.com
     <tr>
 	<td align="right">
 	    <font color="#FFFFFF" size="-2" face="Arial,Helvetica,Verdana">
-	    Copyright © 1996 - 2001 Webspawner.com. All rights reserved.
+	    Copyright Š 1996 - 2001 Webspawner.com. All rights reserved.
 	    </font></td>
     </tr>
 </tbody></table>	
