--- a/k/kc/kce/kcet.org.html
+++ b/k/kc/kce/kcet.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the kcet.org privacy policy that was archived on 2001-12-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011217092020id_/http%3A//www.kcet.org/privacypolicy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the kcet.org privacy policy that was archived on 2002-06-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020604000633id_/http%3A//www.kcet.org/privacypolicy.htm) for the most accurate reproduction.-->
 
 <html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -10,65 +10,38 @@
 
 <table border="0" cellpadding="0" cellspacing="0" width="577">
   <tbody><tr>
-    <td width="575"><font face="Arial, Helvetica, sans-serif">
-
-
-
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-
-
-
-<div align="center">
-  <center>
-  <table border="0" cellspacing="0" cellpadding="0">
-    <tbody><tr>
-      <td>
-        <div align="center">
-          <table border="0" cellspacing="0" cellpadding="0">
-            <tbody><tr>
-              <td rowspan="2"><a href="http://www.kcet.org" target="_top"><img border="0" src="http://www.kcet.org/navs/navimages/nav_kcet.gif" width="102" height="42"></a></td>
-              <td rowspan="2"><map name="FPMap0">
-                <area href="http://www.pbs.org" target="_top" shape="rect" coords="2, 0, 33, 40"></map><img border="0" src="http://www.kcet.org/navs/navimages/nav_pbs.gif" usemap="#FPMap0" width="44" height="42"></td>
-              <td><map name="FPMap1">
-                <area href="http://www.kcet.org/schedule/" coords="10, 6, 60, 19" shape="rect" target="_top">
-                <area href="http://www.kcet.org/highlights/" coords="80, 6, 146, 18" shape="rect" target="_top">
-                <area href="http://www.kcet.org/membership/" shape="rect" coords="167, 5, 247, 17" target="_top">
-                <area href="http://www.kcet.org/inside_kcet/" shape="rect" coords="261, 4, 333, 19" target="_top">
-                <area href="http://www.kcet.org/education/" shape="rect" coords="345, 3, 415, 20" target="_top">
-                <area href="http://www.kcet.org/shop/" shape="rect" coords="429, 5, 466, 20" target="_top"></map><img border="0" src="http://www.kcet.org/navs/navimages/nav_toprow.gif" usemap="#FPMap1" width="476" height="21"></td>
-            </tr>
-            <tr>
-              <td><map name="FPMap2">
-                <area href="http://www.kcet.org/life_times/" shape="rect" coords="7, 0, 118, 17">
-                <area href="http://www.kcet.org/arts/" shape="rect" coords="149, 0, 181, 16" target="_top">
-                <area href="http://www.kcet.org/newsroom/" shape="rect" coords="200, 0, 261, 17">
-                <area href="http://www.kcet.org/conversation/" shape="rect" coords="282, 0, 404, 18" target="_top">
-                <area href="http://www.kcet.org/search/" shape="rect" coords="418, 1, 464, 18" target="_top"></map><img border="0" src="http://www.kcet.org/navs/navimages/nav_bottomrow.gif" usemap="#FPMap2" width="476" height="21"></td>
-            </tr>
-          </tbody></table>
-        </div>
-                <hr size="1">
-      </td>
-    </tr>
-  </tbody></table>
-  </center>
-</div>
-
-
-
+    <td width="575"><font face="Arial, Helvetica, sans-serif"><table width="622" cellspacing="0" cellpadding="0" border="0">
+<tbody><tr>
+<td><a href="http://www.kcet.org/" target="_top"><img src="/navs/navimages/logo1.gif" width="100" height="21" border="0" hspace="0" vspace="0" alt="logo"></a><img src="/navs/navimages/logo2.gif" width="43" height="21" hspace="0" vspace="0" alt="logo2"><a href="http://www.pbs.org/cgi-registry/golocal?station=KCET&amp;site=cgi-registry/whatson/template.cgir?s=KCET" target="_blank"><img src="/navs/navimages/schedule.gif" width="61" height="21" border="0" hspace="0" vspace="0" alt="schedule"></a><img src="/navs/navimages/header_04.gif" width="17" height="21" hspace="0" vspace="0" alt="header"><a href="http://www.kcet.org/highlights/" target="_top"><img src="/navs/navimages/highlights.gif" width="72" height="21" border="0" hspace="0" vspace="0" alt="highlights"></a><img src="/navs/navimages/header_06.gif" width="15" height="21" hspace="0" vspace="0" alt="header"><a href="http://kcet.org/newshop" target="_top"><img src="/navs/navimages/support.gif" width="84" height="21" border="0" hspace="0" vspace="0" alt="support"></a><img src="/navs/navimages/header_08.gif" width="15" height="21" hspace="0" vspace="0" alt="header"><a href="http://www.kcet.org/inside_kcet/" target="_top"><img src="/navs/navimages/about.gif" width="69" height="21" border="0" hspace="0" vspace="0" alt="about"></a><img src="/navs/navimages/header_10.gif" width="16" height="21" hspace="0" vspace="0" alt="header"><a href="http://www.kcet.org/education/" target="_top"><img src="/navs/navimages/education.gif" width="65" height="21" border="0" hspace="0" vspace="0" alt="education"></a><img src="/navs/navimages/header_12.gif" width="16" height="21" hspace="0" vspace="0" alt="header"><a href="http://kcet.org/newshop" target="_top"><img src="/navs/navimages/shop.gif" width="34" height="21" border="0" hspace="0" vspace="0" alt="shop"></a><img src="/navs/navimages/header_14.gif" width="13" height="21" hspace="0" vspace="0" alt="header"></td>
+</tr>
+<tr>
+<td><img src="/navs/navimages/logo3.gif" width="100" height="18"><img src="/navs/navimages/logo4.gif" width="43" height="18" hspace="0" vspace="0" alt="logo"><a href="http://www.kcet.org/life_times/" target="_top"><img src="/navs/navimages/lifetimes.gif" width="123" height="18" border="0" hspace="0" vspace="0" alt="lifetimes"></a><img src="/navs/navimages/header_18.gif" width="53" height="18" hspace="0" vspace="0" alt="header"><a href="http://www.publicbroadcasting.net/kcet/arts.artsmain" target="_top"><img src="/navs/navimages/arts.gif" width="34" height="18" border="0" hspace="0" vspace="0" alt="arts"></a><img src="/navs/navimages/header_20.gif" width="78" height="18" hspace="0" vspace="0" alt="header"><a href="http://www.publicbroadcasting.net/kcet/news.newsmain" target="_top"><img src="/navs/navimages/news.gif" width="61" height="18" border="0" hspace="0" vspace="0" alt="news"></a><img src="/navs/navimages/header_22.gif" width="72" height="18" hspace="0" vspace="0" alt="header"><a href="http://www.kcet.org/search/" target="_top"><img src="/navs/navimages/search.gif" width="43" height="18" border="0" hspace="0" vspace="0" alt="search"><img src="/navs/navimages/header_24.gif" width="13" height="18" border="0" hspace="0" vspace="0" alt="KCET: Infinitely More"></a></td>
+</tr>
+<tr>
+<td colspan="2"><!-- hr size="1"-->&nbsp;&nbsp;</td>
+</tr>
+</tbody></table>
       </font>
     </td>
   </tr>
   <tr>
-    <td width="575"><font size="4">
-      <p align="center"><font face="Arial, Helvetica, sans-serif"><img border="0" src="images/main/mainlogo.jpg" width="596" height="144"></font></p>
-    </font>
+    <td width="622">
+<img src="images/main/mast_gold_top.jpg" width="622" height="73"><br>
+<img src="images/main/mast_bar.gif" width="622" height="24"><br>
+<img src="images/main/mast_gold_bttm.jpg" width="622" height="17"><br>
+<img src="images/main/spacer1.gif" width="622" height="13"> 
+	</td>
+	</tr>
+	<tr>
+	<td width="575">
       <p class="MsoNormal" align="center" style="text-align:center"><b style="mso-bidi-font-weight:
 normal"><font face="Arial, Helvetica, sans-serif" size="2">COMMUNITY TELEVISION OF SOUTHERN CALIFORNIA
       (KCET)<br>
-      PRIVACY POLICY
-      
+      PRIVACY POLICY<br>&nbsp;<br>
       </font></b></p>
+	  </td>
+	  </tr><tr>
+	  <td width="575" align="left">
       <p class="MsoNormal"><font face="Arial, Helvetica, sans-serif" size="2">KCET recognizes the
       importance of protecting the privacy of personally identifiable
       information collected from its members, donors, viewers of KCET and about
@@ -141,8 +114,8 @@ normal"><font face="Arial, Helvetica, sans-serif" size="2">COMMUNITY TELEVISION 
       also prevent children from disclosing their name, address and other
       personally identifiable information on-line without parental permission.<span style="mso-spacerun: yes">&nbsp;
       </span>For additional information about parental control tools, please
-      consult the "Customer Assistance" page of the <u>Direct
-      Marketing Association</u> home page located at <a href="http://WWW.the-dma.org"><b>WWW.the-dma.org</b></a>.<span style="mso-spacerun: yes">&nbsp;</span></font></p>
+      consult the <u>Direct
+      Marketing Association</u> home page located at <a href="http://www.the-dma.org"><b>www.the-dma.org</b></a>.<span style="mso-spacerun: yes">&nbsp;</span></font></p>
       <p class="MsoNormal"><font face="Arial, Helvetica, sans-serif" size="2">6.
       KCET maintains a membership/customer database with the e-mail address,
       name and postal address, telephone number and other personally
@@ -307,7 +280,7 @@ QUICK LINKS</font><br>
     |&nbsp; <a href="http://www.kcet.org/newsroom/" target="_top">Newsroom</a> | <a href="http://www.pbskids.org" target="_top">PBS
          Kids</a>&nbsp; |&nbsp;<a href="http://www.kcet.org/arts/" target="_top">Arts</a> &nbsp;&nbsp;<a href="http://www.kcet.org/conversation/" target="_top"><br>
          Conversation</a> | <a href="http://www.kcet.org/dtv/index.html" target="_top">DTV</a>  
-         |  <a href="http://www.kcet.org/shop/" target="_top">Shop</a>
+         |  <a href="http://kcet.org/newshop" target="_top">Shop</a>
     |&nbsp;<a href="http://www.kcet.org/search/" target="_top">Search</a>&nbsp;| <a href="http://www.kcet.org/feedback/" target="_top">Feedback</a>
          |&nbsp;<a href="http://www.kcet.org/chat/index.htm" target="_top">Chat</a> | </font><a href="http://www.kcet.org/privacypolicy.htm" target="_top"><small><small>Privacy
          Policy</small></small></a><small><small> |&nbsp;</small></small><a href="http://www.kcet.org/legalnotice.htm" target="_top"><small><small>Legal
